Implemented logic to reduce mismatches.